<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dev.firedetector.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.dev.firedetector.ui.emergency.EmergencyFragment"
        android:label="@string/title_emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dev.firedetector.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.dev.firedetector.ui.history.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />
</navigation>